--- a/portfolio.html
+++ b/portfolio.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" style="text/css" href="bootstrap.min.css">
   <link rel="stylesheet" style="text/css" href="portfolio.css">
   <link rel="shortcut icon" type="image/x-icon" href="files/icon.ico" />
   <script src="js/app.js"></script>
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
-  <script src="js/bootstrap.min.js"></script>
   
 </head>
 <body>
@@ -15,8 +13,7 @@
     <ul>
     <li><a href="index.html">About Me</a></li>
     <li><a href="portfolio.html">Portfolio</a></li>
-   <!--  <li><a href="https://docs.google.com/document/d/1INnvxTD_RJSPKfECsTMdnGEG6kHTAcZ5P4qEQpL7yxU/pub?embedded=true">Resume</a></li> -->
-   <li><a href="files/Resume.pdf">Resume</a></li>
+   <li><a href="files/Resume_fr.pdf">Resume</a></li>
     <li><a href="https://github.com/pazzissima">Github</a></li>
     <li><a href="http://linkedin.com/in/sofianagaslaeva/">LinkedIn</a></li>
     </ul>  
@@ -36,7 +33,7 @@
 
 
       <li class="oneProject">
-        <a href="http://lovejunkiesthemusical.com" target="_blank">Website for the musical I am in</a><br>
+        <a href="http://lovejunkiesthemusical.com" target="_blank">Website for the musical I was in (2014)</a><br>
         <a href="http://lovejunkiesthemusical.com" target="_blank">
           <figure><img src="files/lg.jpg" alt="Love Junkies the Musical" title="Love Junkies the Musical"></figure>
         </a>
@@ -44,8 +41,8 @@
       </li><br>
 
       <li class="oneProject">
-        <a href="http://serene-peak-4670.herokuapp.com/" target="_blank">Tarot Cards</a><br>
-        <a href="http://serene-peak-4670.herokuapp.com/" target="_blank">
+        <a href="https://github.com/pazzissima/tarot_cards_app" target="_blank">Tarot Cards repo</a><br>
+        <a href="https://github.com/pazzissima/tarot_cards_app" target="_blank">
           <figure><img src="files/tarot.jpg" alt="Tarot Cards App" title="Tarot Cards App"></figure>
         </a>
         <p>This was my first Ruby on Rails project. Tarot Cards are believed to speak about a person's current situation in life and answer some questions on a philosophical and spiritual level. When the User picks a random card they are then required to sign in or sogn up in order to see the meaning of that card. There is also some JavaScript employed in this project.
@@ -56,14 +53,14 @@
         <p>This project uses a variety of technologies such as Rails, Paperclip, S3, MediaStream, Sunspot etc. It allows users to upload, share, and upvote audio, create snippets of soundclips, search for user content, make playlists and view a map of user activity worldwide.
       </li><br/> -->
       <li class="oneProject">
-        <a href="https://github.com/pazzissima/final_project" target="_blank">Better News</a><br>
+        <a href="https://github.com/pazzissima/final_project" target="_blank">Better News repo</a><br>
           <figure><img src="files/better_news.jpg"></figure>
         <p>This is a "Better Facebook" application. It allows users to login fith the Facebook account, see all the news feed from Facebook and sort it by the type of content. It also lets users upload and store images that are visible to all the 'Better News' users but don't get published on Facebook itself. Technologies I used include Ruby on Rails, AngularJS, Sidekiq, Redis, S3, Paperclip, etc.
       </li>
     </ol>
   </div>
   <script>
-    msg = "Sofya Nagaslaeva is the best programmer in the world";
+    msg = "Sofya Nagaslaeva. Front-end development: HTML, CSS, JavaScript.";
 
     msg = "..." + msg;pos = 0;
     function scrollMSG() {
@@ -74,15 +71,6 @@
     }
     scrollMSG();
   </script>
-
-  <!-- <script>
-    jQuery(document).ready(function() {
-      $('a[href*="Fall Leaves"]').hover(function() {
-        $('a[href*="Fall Leaves"]').css('font-size', '3em');
-        console.log('damn')
-      });
-    });
-  </script> -->
 
 </body>
 
