refactor some code

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
     /*background-color: #C3D7DF;*/
  }
  .topTop {
-  height: 275px;
   position: relative;
  }
  .construction{
@@ -48,24 +47,19 @@ ul li ul a:hover {
 }
 /*DROPDOWN styles*/
 ul {
-/*  position: absolute;*/
   text-align: left;
-/*  display: inline;*/
   margin: 0 auto;
-  padding: 6px;
+  padding: 15px 0;
   list-style: none;
   -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
   -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
-  top: 350px;
-  width: 506px;
 }
 ul li {
   font: bold 15px sans-serif;
   display: inline-block;
   margin-right: -4px;
   position: relative;
-  padding: 15px 25px;
   background: #3A0256;
   cursor: pointer;
   -webkit-transition: all 0.2s;
@@ -75,6 +69,8 @@ ul li {
   transition: all 0.2s;
   z-index: 600;
   color: #ffffff;
+  padding: 15px 3%;
+  /* margin: 0 auto; */
 }
 ul li:hover {
   background: rgb(75,0,130);
@@ -85,7 +81,7 @@ ul li ul {
   position: absolute;
   top: 47px;
   left: 0%;
-  width: 154px;
+  width: 157px;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
@@ -101,9 +97,6 @@ ul li ul li {
 }
 ul li ul li:hover { background: rgb(75,0,130); }
 ul li:hover ul {
-  /* display: block;
-  opacity: 1;
-  visibility: visible; */
   max-height: 400px;
 }
 
@@ -120,63 +113,25 @@ ul li:hover ul {
     color: #8B008B;
     background-color: rgba(255,255,255,0.8);
     margin-top: 20px;
-    margin: 20px 26%;
+    margin: 17px 26%;
     border: 2px solid #8B008B;
     border-radius: 2%;
 }
-@media (max-width: 800px) {
- /* .topTop {
-    height: 368px;
-  }*/
-  ul {
-    margin: 12px auto;
-  }
-  ul li ul {
-    top: 35px;
-  }
- 
-}
-@media (min-width: 769px) {
-  .mobileOnly {
-    display: none;
-  }
-}
-@media (max-width: 768px) {
-  .mobileOnly {
-    display: block;
-    position: relative;
-  }
-}
 .smll_menu {
-  display: none;
+  display: inline-block;
+  margin: 0 auto;
+  width: 100%;
+  text-align: center;
 }
-@media only screen and (max-device-width: 786px) {
-  .lrge_menu {
-    display: none;
-  }
-  .smll_menu {
-    display: inline-block;
-    margin: 0 auto;
-    width: 100%;
-    text-align: center;
-  }
-  ul li {
-    padding: 15px 3%;
-    margin-right: -1px;
-    margin: 0 auto;
-  }
-  .rest {
-    margin-top: 10%;
-  }
-  .new_fonts {
-    margin: 20px 12%;
-  } 
- 
+.lrge_menu {
+  display: none;
 }
 .mobileOnly{
   width: 70%;
   max-width: 620px;
   margin: 0 auto 20px;
+  display: block;
+  position: relative;
 }
 .mobileOnly img{
   width: 100%;
@@ -186,6 +141,27 @@ ul li:hover ul {
 .loader {
   position: relative;
 }
+
+
+/* DESKTOP ONLY*/
+@media only screen and (min-width: 768px) {
+  .mobileOnly {
+    display: none;
+  }
+  .lrge_menu {
+    display: flex;
+    justify-content:center;
+    margin: 0 auto 30px;
+  }
+  .smll_menu {
+    display: none;
+  }
+  ul li{
+    margin-right: -4px;
+    padding: 15px 25px;
+  }
+}
+
 
  </style>
 
