adding React app to my projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,16 @@
 
       <li class="oneProject">
         <div>
+          <a href="http://nsof.co/react-weather-app/" target="_blank">React Weather App</a>
+          <p>Using weather API to build a simple app in React. Input a city or a zip code. Shows current weather, 5-day forecast and air quality.</p>
+        </div>
+        <a href="http://nsof.co/react-weather-app/" target="_blank">
+          <figure><img src="projects/fall_leaves/images/react_weather_app.jpg" alt="React weather app" title="React weather app"></figure>
+        </a>
+      </li>
+
+      <li class="oneProject">
+        <div>
           <a href="projects/fall_leaves/index.html" target="_blank">Fall Leaves</a>
           <p>This is one of my side projects. <br>Experimenting with JavaScript.</p>
         </div>
