--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
           <p>Using weather API to build a simple app in React. Input a city or a zip code. Shows current weather, 5-day forecast and air quality.</p>
         </div>
         <a href="http://nsof.co/react-weather-app/" target="_blank">
-          <figure><img src="projects/fall_leaves/images/react_weather_app.jpg" alt="React weather app" title="React weather app"></figure>
+          <figure><img src="files/react_weather_app.jpg" alt="React weather app" title="React weather app"></figure>
         </a>
       </li>
 
