added react project

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,6 +36,16 @@
 
       <li class="oneProject">
         <div>
+          <a href="http://nsof.co/react-todo-app/" target="_blank">React Todo App</a>
+          <p>Simple Todo list</p>
+        </div>
+        <a href="http://nsof.co/react-todo-app/" target="_blank">
+          <figure><img src="files/react-todo-app.jpg" alt="React Todo app" title="React Todo app"></figure>
+        </a>
+      </li>
+
+      <li class="oneProject">
+        <div>
           <a href="projects/fall_leaves/index.html" target="_blank">Fall Leaves</a>
           <p>This is one of my side projects. <br>Experimenting with JavaScript.</p>
         </div>
